Pull docker image when necessary for @QuarkusIntegrationTest
Fixes: #17730
(cherry picked from commit 656d8a95662db5f491fa4a90f62e4caeb50954cf)